--- a/jbuffer/build.gradle
+++ b/jbuffer/build.gradle
@@ -6,3 +6,7 @@ sourceCompatibility = '1.7'
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+tasks.withType(JavaCompile) {
+  options.encoding = 'UTF-8'
+}
